优化了图片链接

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <title>新垣结衣</title>
     <style>
       img {
         width: 400px;
@@ -91,13 +92,19 @@
     <h2 id="pictures">生活照</h2>
     <section>
       <div>
-        <img src="./images/1.png" alt="图一" />
+        <a href="./images/1.png" target="_blank"
+          ><img src="./images/1.png" alt="图一"
+        /></a>
       </div>
       <div>
-        <img src="./images/2.png" alt="图二" />
+        <a href="./images/2.png" target="_blank"
+          ><img src="./images/2.png" alt="图二"
+        /></a>
       </div>
       <div>
-        <img src="./images/3.png" alt="图三" />
+        <a href="./images/3.png" target="_blank"
+          ><img src="./images/3.png" alt="图三"
+        /></a>
       </div>
     </section>
     <h2 id="life">
